--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "tetrix-last",
-  "version": "1.0.0",
-  "main": "db.js",
-  "scripts": {
-    "start": "nodemon bot.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
-  "dependencies": {
-    "dotenv": "^17.2.0",
-    "node-telegram-bot-api": "^0.66.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  }
+    "name": "tetrix-last",
+    "version": "1.0.0",
+    "main": "bot.js",
+    "scripts": {
+        "start": "echo 'This is a static site, use Netlify for deployment'",
+        "dev": "nodemon bot.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "nodemon": "^3.1.10"
+    },
+    "dependencies": {
+        "node-telegram-bot-api": "^0.66.0",
+        "dotenv": "^16.0.3"
+    }
 }
